[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/In-Engine-Jumper/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/In-Engine-Jumper/Enemy.gd" type="Script" id=2]
[ext_resource path="res://addons/In-Engine-Jumper/Game.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]
radius = 16.0
height = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="Animation" id=3]
resource_name = "jumping"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 150, 170 ), Vector2( 150, 80 ), Vector2( 150, 170 ) ]
}

[sub_resource type="SphereMesh" id=4]
radius = 16.0
height = 32.0

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[sub_resource type="Animation" id=6]
resource_name = "moving_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 280, 170 ), Vector2( 20, 170 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 170 ), Vector2( 280, 170 ) ]
}

[node name="Game" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="Background"]
position = Vector2( 150, 170 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance2D" parent="Background/Player"]
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Player"]
visible = false
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Player"]
anims/jumping = SubResource( 3 )

[node name="Enemy" type="KinematicBody2D" parent="Background"]
position = Vector2( 280, 170 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance2D" parent="Background/Enemy"]
modulate = Color( 1, 0, 0, 1 )
mesh = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Enemy"]
visible = false
shape = SubResource( 5 )

[node name="Anim" type="AnimationPlayer" parent="Background/Enemy"]
anims/moving_left = SubResource( 6 )
anims/moving_right = SubResource( 7 )

[node name="Score" type="Label" parent="Background"]
margin_right = 40.0
margin_bottom = 14.0
text = "SCORE: 1423"

[node name="ScoreTimer" type="Timer" parent="Background"]
autostart = true

[node name="Jump" type="Button" parent="."]
margin_top = 200.0
margin_right = 44.0
margin_bottom = 220.0
text = "Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 262.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 220.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayStatus" type="Label" parent="."]
margin_left = 110.0
margin_top = 200.0
margin_right = 182.0
margin_bottom = 214.0
text = "Not playing"

[connection signal="jumping" from="Background/Player" to="Background/Player" method="_on_Player_jumping"]
[connection signal="timeout" from="Background/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="button_down" from="Jump" to="Background/Player" method="_on_Jump_button_down"]
[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
